--- a/my-supabase/src/styles/globals.css
+++ b/my-supabase/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-/* 
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -86,8 +86,8 @@
 }
 
 body {
-  background: var(--foreground);
-  color: var(--background);
+  background: var(--background);
+  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -132,4 +132,4 @@ body {
   body {
     @apply bg-background text-foreground;
   }
-} */
+}
